project card spacing fix

--- a/app/styles/_global-styles.scss
+++ b/app/styles/_global-styles.scss
@@ -1984,7 +1984,7 @@ div[class^='_c-notification__container'] {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 0.8em;
+    margin-left: 1em;
 
     &-label {
       padding-left: 0.3em;
